# bridgekeeper

./: .gitignore  Cargo.toml  Dockerfile  README.md  bridgekeeper-0.1.0.tgz  bridgekeeper-0.2.0.tgz  bridgekeeper-0.2.1.tgz  bridgekeeper-0.3.0.tgz  bridgekeeper-0.3.1.tgz  bridgekeeper-0.3.2.tgz  bridgekeeper-0.3.3.tgz  bridgekeeper-0.4.0-dev.tgz  index.yaml
.github/: renovate.json
.github/workflows/: release.yaml  test.yaml
charts/bridgekeeper/: Chart.yaml  values.yaml
charts/bridgekeeper/crds/: constraint.yaml
charts/bridgekeeper/templates/: _helpers.tpl  audit-cronjob.yaml  cleanup.yaml  crds.yaml  deployment.yaml  init.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
example/: constraint.yaml  mutate-add-label.yaml  policy.yaml
functional_tests/: README.md  execute_tests.py  run.sh
functional_tests/apply/policies/: core-api-group.yaml  no-latest-tag.yaml
functional_tests/apply/test_files/: core-api-group-error.yaml
functional_tests/audit/policies/: core-api-group.yaml  no-latest-tag.yaml
functional_tests/audit/test_files/: core-api-group-error.yaml  no-latest-tag-error.yaml
functional_tests/invalid/policies/: syntax-error.yaml  unknown-import.yaml
functional_tests/mutate/policies/: add-label.yaml
functional_tests/mutate/test_files/: add-label-mutated.yaml  add-label.yaml
manifests/: admission-controller-local.yaml  admission-controller.yaml  constraint-validation-controller-local.yaml  constraint-validation-controller.yaml  policy-validation-controller-local.yaml  policy-validation-controller.yaml
src/: api.rs  audit.rs  constants.rs  constraint.rs  crd.rs  evaluator.rs  events.rs  main.rs  manager.rs  module.rs  policy.rs  server.rs  watcher.rs
src/helper/: cleanup.rs  gencrd.rs  init.rs  mod.rs
src/util/: cert.rs  defaults.rs  error.rs  k8s.rs  k8s_client.rs  k8s_util.rs  mod.rs  traits.rs  types.rs  webhook.rs
