[package]
name = "bridgekeeper"
version = "0.1.0"
authors = ["Sebastian Woehrl <sebastian.woehrl@maibornwolff.de>"]
edition = "2018"

[dependencies]
log = "0.4.22"
kube = {version = "0.93.1", features = ["derive", "admission", "runtime"]}
k8s-openapi = { version = "0.22.0", default-features = false, features = ["v1_24"] }
schemars = "0.8.21"
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.125"
serde_yaml = "0.9.34"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"]}
futures = "0.3.30"
pyo3 = "0.22.2"
pythonize = "0.22.0"
rcgen = "0.13.1"
base64 = "0.22.1"
argh = "0.1.12"
rust-embed = "8.5.0"
lazy_static = "1.5.0"
prometheus = { version = "0.13.4", default-features = false }
json-patch = "2.0.0" # needs older version as kube-core uses that
exponential-backoff = "1.2.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "json", "std", "registry"] } 
hyper = { version = "1.4.1", features = ["client"] }
axum = { version = "0.7.5" }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
hyper-util = { version = "0.1.7", features = ["client", "client-legacy", "tokio", "http1"] }


[profile.release]
lto = false # Smaller size is not worth the compile time increase
# When a panic in a task occures we want the whole process to crash to trigger a kubernetes pod restart
panic = 'abort'
# Make binary smaller
debug = 0
strip = true
